# azerothcore-wotlk

./: .editorconfig  .gitignore  CMakeLists.txt  PreLoad.cmake  doc_build  doc_cmake
apps/compiler/includes/: functions.sh  includes.sh
apps/installer/includes/: functions.sh
src/: CMakeLists.txt
src/cmake/macros/: AutoCollect.cmake  ConfigureApplications.cmake  ConfigureModules.cmake  ConfigureScripts.cmake  ConfigureTools.cmake
src/common/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/apps/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt
